--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
+/src/vendor
 .env
 .env.backup
 .phpunit.result.cache
@@ -13,8 +13,3 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-
-.c9/
-/public/access-nginx.log
-/public/error-nginx.log
-/public/worker.log
