refactor: add version nginx & update favicon path

--- a/.env.example
+++ b/.env.example
@@ -2,24 +2,25 @@
 DOCKER_PROJECT_NAME=any
 DOCKER_PROJECT_PATCH=/var/www
 
-#PHP
-PHP_VERSION=8.1
-PHP_INI_DIR=/usr/local/etc/php
-
 #USER
 USER_NAME=dev
 USER_UID=1001
 
+#PHP
+PHP_VERSION=8.1
+PHP_INI_DIR=/usr/local/etc/php
+
 #MYSQL
+MYSQL_VERSION=latest
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=demo
 DB_USERNAME=tmp
 DB_PASSWORD=tmp
-MYSQL_VERSION=latest
 
 #NGINX
+NGINX_VERSION=latest
 NGINX_PORT=80
 NGINX_SERVER_NAME=localhost
 NGINX_ROOT=${DOCKER_PROJECT_PATCH}/src/public
