--- a/docker/services/nginx/templates/default.conf.template
+++ b/docker/services/nginx/templates/default.conf.template
@@ -7,6 +7,10 @@ server {
     index index.php;
     root ${NGINX_ROOT};
 
+    location = /favicon.ico {
+        alias ${NGINX_ROOT}/favicon.ico;
+    }
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_pass app:9000;
@@ -20,5 +24,9 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
