--- a/src/composer.json
+++ b/src/composer.json
@@ -4,5 +4,11 @@
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "config": {
+        "optimize-autoloader": true
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
